# bgl-gamebient-engine

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml  create-release.yml  deploy-program.yml  main.yml  test-js-client.yml  test-rust-client.yml
clients/cli/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/cli/src/: index.ts  setup.ts
clients/cli/src/commands/: commission-machine.ts  get-cartridge.ts  get-game.ts  get-machine.ts  insert-cartridge.ts  list-cartridges.ts  list-games.ts  list-machines.ts  print-cartridge.ts  release-game.ts  remove-cartridge.ts  set-cartridge-source.ts
clients/cli/src/lib/: gameMetadata.ts  gamePrompt.ts  upload.ts
clients/cli/src/utils/: constants.ts  display.ts
clients/js/: CONTRIBUTING.md  package.json  pnpm-lock.yaml
clients/js-cartridge/: README.md  package.json  pnpm-lock.yaml
clients/js-cartridge/bench/: _setup.ts
clients/js-cartridge/src/: index.ts  plugin.ts
clients/js-cartridge/src/hooked/: pdas.ts
clients/js-cartridge/test/: _setup.ts  getProgram.test.ts  insertCartridge.test.ts  printGameCartridge.test.ts  releaseGame.test.ts  removeCartridge.test.ts  setCartridgeSource.test.ts
clients/js-cartridge/test/fixtures/: source-authority.json
clients/js-ghost/: package.json  pnpm-lock.yaml
clients/js-ghost/bench/: _setup.ts
clients/js-ghost/src/: plugin.ts
clients/js-ghost/src/hooked/: pdas.ts
clients/js-ghost/test/: _setup.ts  createGhost.test.ts  expireGhost.test.ts  getProgram.test.ts  useGhost.test.ts
clients/js-legit/: package.json
clients/js-legit/bench/: _setup.ts
clients/js-legit/src/: plugin.ts
clients/js-legit/test/: _setup.ts  claimRewards.test.ts  createStake.test.ts  getProgram.test.ts  initializePool.test.ts  slash.test.ts  unstake.test.ts  updatePool.test.ts
clients/js/test/: _setup.ts  commissionMachine.test.ts  releaseGame.test.ts
clients/rust/: CONTRIBUTING.md  README.md
clients/rust-cartridge/: Cargo.toml
clients/rust-ghost/: Cargo.toml
clients/rust-ghost/src/: lib.rs
clients/rust-legit/: Cargo.toml
clients/rust/tests/: create.rs
configs/: cartridge-kinobi.cjs  generate-idl-direct.js  ghost-kinobi.cjs  kinobi.cjs  legit-kinobi.cjs  shank.cjs  validator.cjs
configs/scripts/client/: format-js.sh  lint-js.sh  test-js.sh  test-rust.sh
configs/scripts/program/: dump.sh
docs/plans/: 2026-02-20-gmbnt-cli-design.md  2026-04-25-cartridge-source-appdata-design.md
idls/: bgl_cartridge.json  bgl_cartridge_program.json  bgl_ghost_program.json  bgl_legit_program.json
programs/bgl-cartridge/: Cargo.toml  README.md
programs/bgl-cartridge/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/bgl-cartridge/src/processor/: commission_machine.rs  insert_cartridge.rs  mod.rs  print_game_cartridge.rs  release_game.rs  remove_cartridge.rs  set_cartridge_source.rs
programs/bgl-ghost/: Cargo.toml  README.md
programs/bgl-ghost/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  state.rs
programs/bgl-legit/: Cargo.toml  README.md
programs/bgl-legit/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
programs/bgl-legit/src/processor/: claim_rewards.rs  create_stake.rs  initialize_pool.rs  mod.rs  slash.rs  unstake.rs  update_pool.rs
programs/bgl-legit/src/state/: mod.rs  stake_account.rs  staker_type.rs  staking_config.rs  staking_pool.rs
(+5 files in other folders)
