[package]
name = "bgl-legit-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
shank = "0.4.8"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "^2.3"
thiserror = "^2.0"
strum = "0.27"
strum_macros = "0.27"
bytemuck = { version = "1.23", features = ["derive", "min_const_generics"] }
spl-token = {version = "^6.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "^6.0", features = ["no-entrypoint"]}
mpl-utils = "0.4"